--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
+}
+
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('https://i.ibb.co/DGgnTLL/274948806-537154807560949-377540661517471500-n.jpg') center/cover no-repeat;
+  opacity: 0.8; /* Adjust the opacity as needed */
+  z-index: -1; /* Place the overlay behind other content */
 }
 
 code {
