--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('https://i.ibb.co/DGgnTLL/274948806-537154807560949-377540661517471500-n.jpg') center/cover no-repeat;
+  background: url('https://i.ibb.co/FD7H1QH/image.jpg') center/cover no-repeat;
   opacity: 0.8; /* Adjust the opacity as needed */
   z-index: -1; /* Place the overlay behind other content */
 }
