--- a/src/index.css
+++ b/src/index.css
@@ -16,11 +16,31 @@ body::before {
   width: 100%;
   height: 100%;
   background: url('https://i.ibb.co/FD7H1QH/image.jpg') center/cover no-repeat;
-  opacity: 0.8; /* Adjust the opacity as needed */
+  opacity: 1;
   z-index: -1; /* Place the overlay behind other content */
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.david-libre-regular {
+  font-family: "David Libre", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.david-libre-medium {
+  font-family: "David Libre", serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.david-libre-bold {
+  font-family: "David Libre", serif;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 70px;
 }
