--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,7 @@ body::before {
   left: 0;
   width: 100%;
   height: 100%;
-  background: url('https://i.ibb.co/FD7H1QH/image.jpg') center/cover no-repeat;
+  background: url('https://i.ibb.co/wBQwDv5/3.jpg') center/cover no-repeat;
   opacity: 1;
   z-index: -1; /* Place the overlay behind other content */
 }
@@ -65,3 +65,4 @@ img {
   max-width: 100%;
   height: auto;
 }
+
